...
            "state" : "translated",
            "value" : "Adicionar tarefa"
          }
        }
      }
    },
    "Kid Mode" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "وضع الأطفال"
          }
...
            "state" : "translated",
            "value" : "Sistema"
          }
        }
      }
    },
    "Exit kid mode" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الخروج من وضع الأطفال"
          }
...
    "Enter your email and we'll send you a link to reset your password." : {

    },
    "Enter your password" : {

    },
    "Enter Your PIN" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "أدخل رمز PIN"
          }
...
            "state" : "translated",
            "value" : "Primeiros passos"
          }
        }
      }
    },
    "Go!" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "هيا!"
          }
...
        }
      }
    },
    "Hide" : {

    },
    "Home" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الرئيسية"
          }
...
