...
 "get_dressed_62d6b": "Get Dressed",
 "get_it_516d9": "Get it!",
 "getting_started_010b8": "Getting Started",
 "go_149d7": "Go!",
 "got_a_code_from_your_partner_enter_it_he_078c6": "Got a code from your partner? Enter it here to manage their family together. Your view switches to their family's chores.",
 "have_a_snack_17c71": "Have a Snack",
 "hi_149da": "Hi, %@! 👋",
 "hide_34d8b": "Hide",
 "home_70f8b": "Home",
 "how_much_fa22a": "How much?",
 "how_should_rewards_work_0cf5f": "How Should Rewards Work?",
 "hugs_kisses_fe6b0": "Hugs & Kisses",
 "i_ll_explore_on_my_own_7d201": "I'll explore on my own",
...
